--- a/museum/style.css
+++ b/museum/style.css
@@ -307,7 +307,7 @@ a {
   padding: 75px 0;
 }
 
-.explore-block {
+.explore-content {
   display: flex;
   justify-content: space-between;
 }
@@ -366,21 +366,20 @@ a {
 .video {
   background-color: white;
 }
+
 .video-container {
   height: 1246px;
   background-color: white;
   padding: 75px 0;
+  box-sizing: content-box;
 }
 
-.video-block {
+.video-content {
   display: flex;
   justify-content: space-between;
 }
 
 .video-text {
-  /* width: 720px; */
-  /* left: 720px;
-  top: 0px; */
   width: 50%;
   height: 90px;
   font-family: "Roboto", sans-serif;
@@ -391,133 +390,230 @@ a {
   display: flex;
   align-items: center;
   color: #000000;
+  /* width: 720px; */
+  /* left: 720px;
+  top: 0px; */
 }
+
+.video-block {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
 .video-image {
   height: 650px;
 }
+
 .video-button {
   background-image: url("./assets/svg/play.svg");
-  /* position: absolute; */
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
+  position: absolute;
+  background-color: transparent;
   width: 220px;
   height: 220px;
-  /* margin-bottom: 40px; */
   transition: 0.7s;
+  margin-bottom: 40px;
   border: none;
+  /* background-size: contain; */
+  /* background-repeat: no-repeat; */
+  /* background-position: center; */
+  /* top: 50%; */
+  /* left: 50%; */
+  /* transform: translate(-50%, -67%); */
   /* z-index: 3; */
-  /* color: #ffffff; */
-  /* fill: red !important; */
-  /* color: #030303; */
-  fill: #ffffff;
-  background-color: transparent;
+  /* fill: #ffffff; */
+  /* margin: auto; */
   padding: 0;
 }
 
 .video-button:hover {
   filter: invert(26%) sepia(15%) saturate(638%) hue-rotate(7deg) brightness(92%)
     contrast(87%);
+  /* color: #9d8665; */
   cursor: pointer;
 }
-.video-block-image {
-  display: flex;
-  justify-content: space-between;
-  height: 254px;
-  padding: 30px 0;
-  /* gap: 45px; */
-}
 
-.video-box {
-  flex-basis: 30%;
-}
-
-.control-box {
+.video-control-box {
   display: flex;
   direction: row;
   justify-content: space-around;
   align-items: center;
   width: 100%;
   height: 85px;
-  background-color: black;
+  background-color: #000000;
+  /* flex-wrap: wrap; */
+  /* justify-content: space-between; */
   /* border: 1px solid #bdae82;
   border-top: 0; */
+  /* margin-top: -4px; */
 }
+
 .play-icon {
   background-image: url("./assets/svg/play-icon.svg");
   width: 23px;
   height: 31px;
+  margin: 30px;
+  /* -webkit-mask-size: cover; */
 }
+
 .volume-icon {
   background-image: url("./assets/svg/volume-icon.svg");
   width: 38px;
   height: 31px;
+  margin: 30px;
+  /* -webkit-mask-size: cover; */
 }
+
 .square-icon {
   background-image: url("./assets/svg/square-icon.svg");
   width: 35px;
   height: 35px;
-}
-/* .play-icon {
-  background-size: contain;
-  background-position: center;
-  background-repeat: no-repeat;
-  width: 40px;
-  height: 36px;
-  transition: 0.7s;
-} */
-
-/* .play-icon:hover,
-.play-icon:active {
-  filter: invert(26%) sepia(15%) saturate(638%) hue-rotate(7deg) brightness(92%)
-    contrast(87%);
-  cursor: pointer;
-} */
-
-/* 
-
-.pause {
-  background-image: url("./assets/svg/pause.svg");
+  margin: 30px;
+  /* -webkit-mask-size: cover; */
 }
 
-.mute {
-  background-image: url("./assets/svg/mute.svg");
-} */
-
-/* .progress {
+.progress {
   background: linear-gradient(
     to right,
-    #bdae82 0%,
-    #bdae82 0%,
-    #c8c8c8 0%,
-    #c8c8c8 100%
+    #710707 0%,
+    #710707 50%,
+    #c4c4c4 50%,
+    #c4c4c4 100%
   );
-  height: 10px;
+  height: 8px;
   width: calc(80% - 160px);
   appearance: none;
   outline: none;
-} */
+  /* width: 64.5%; */
+  /* transition: background 450ms ease-in; */
+}
 
-/* .volume {
+.volume {
   background: linear-gradient(
     to right,
-    #bdae82 0%,
-    #bdae82 40%,
-    #c8c8c8 40%,
-    #c8c8c8 100%
+    #710707 0%,
+    #710707 40%,
+    #c4c4c4 40%,
+    #c4c4c4 100%
   );
-  width: calc(20% - 40px);
-  height: 10px;
+  width: calc(20% - 30px);
+  height: 8px;
   appearance: none;
   outline: none;
-} */
+  /* width: 10.76%; */
+  /* transition: background 450ms ease-in; */
+}
 
-/* .progress::-webkit-slider-thumb,
+.progress::-webkit-slider-thumb,
 .volume::-webkit-slider-thumb {
   width: 15px;
   height: 15px;
   border-radius: 50%;
   -webkit-appearance: none;
   cursor: ew-resize;
-  background: #fff;
-} */
+  background: #ffffff;
+}
+
+.video-block-image {
+  display: flex;
+  justify-content: space-between;
+  /* height: 254px; */
+  padding: 30px 0;
+  /* gap: 45px; */
+}
+
+.video-box {
+  /* flex-basis: 30%; */
+  margin: 20px 0;
+  display: flex;
+  justify-content: center;
+  /* height: 100%;
+  width: 100%;
+ */
+  align-items: center;
+}
+
+.video-box-title {
+  display: flex;
+  /* flex-direction: row; */
+  /* align-items: flex-start; */
+  align-self: flex-start;
+  padding-top: 10px;
+  /* padding-left: 80px; */
+  /* display: inline-block; */
+  /* background-position: center 0; */
+  /* margin-left: 10px; */
+  /* justify-content: space-between; */
+  /* justify-content: flex-start; */
+}
+
+.ellipse {
+  width: 40px;
+  height: 40px;
+  position: absolute;
+  background-color: whitesmoke;
+  background-color: transparent !important;
+  outline: none;
+  background-image: none;
+  /* background-image: rgba(0, 0, 0, 0); */
+  /* opacity: 0; */
+  /* margin-top: 10px;
+  align-self: flex-start; */
+  /* background-color: transparent; */
+  /* background-size: contain; */
+  /* background-position: center; */
+  /* background-repeat: no-repeat; */
+  /* transition: 0.7s; */
+  border: none;
+  border: 0;
+  /* padding: 0; */
+  /* float: left; */
+  /* margin: 0 90px 95px 0; */
+  /* position: relative; */
+  /* margin-right: 50px; */
+  /* background-position: 400px 25px; */
+  /* 
+  top: 0px;
+  left: 0px; */
+}
+.video-title {
+  color: #ffffff;
+  position: absolute;
+  /* align-self: flex-start;
+  margin-top: 10px; */
+  /* margin: auto; */
+  /* z-index: 10; */
+}
+
+.three-dots {
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  /* align-self: flex-start;
+  margin-top: 10px; */
+  /* background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center; */
+}
+
+.video-image1 {
+  /* position: relative; */
+  /* height: 100%;
+  width: 100%; */
+}
+.youtube-icon {
+  background-image: url("./assets/svg/youtube-icon.svg");
+  background-size: contain;
+  background-color: transparent;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 70px;
+  height: 70px;
+  /* transition: 0.7s; */
+  border: none;
+  padding: 0;
+  position: absolute;
+  /* margin-right: 40px; */
+}
