feat: add section gallery and ticket

--- a/museum/style.css
+++ b/museum/style.css
@@ -344,7 +344,7 @@ a {
   height: 3px;
   background-color: #710707;
   border-radius: 0px;
-  width: 90%;
+  /* width: 90%; */
 }
 
 /* .explore-image {
@@ -541,6 +541,7 @@ a {
   /* align-items: flex-start; */
   align-self: flex-start;
   padding-top: 10px;
+  margin: 0 auto;
   /* padding-left: 80px; */
   /* display: inline-block; */
   /* background-position: center 0; */
@@ -553,10 +554,10 @@ a {
   width: 40px;
   height: 40px;
   position: absolute;
-  background-color: whitesmoke;
+  /* background-color: whitesmoke;
   background-color: transparent !important;
   outline: none;
-  background-image: none;
+  background-image: none; */
   /* background-image: rgba(0, 0, 0, 0); */
   /* opacity: 0; */
   /* margin-top: 10px;
@@ -566,8 +567,8 @@ a {
   /* background-position: center; */
   /* background-repeat: no-repeat; */
   /* transition: 0.7s; */
-  border: none;
-  border: 0;
+  /* border: none; */
+  /* border: 0; */
   /* padding: 0; */
   /* float: left; */
   /* margin: 0 90px 95px 0; */
@@ -616,4 +617,132 @@ a {
   padding: 0;
   position: absolute;
   /* margin-right: 40px; */
+}
+
+.slider {
+  display: flex;
+  margin: 0 auto;
+  height: 12px;
+}
+
+/* --------------GALLERY--------------- */
+.gallery {
+  background-color: #030303;
+}
+
+.gallery-container {
+  height: 2200px;
+  position: relative;
+  padding-top: 75px;
+  margin-bottom: 10px;
+}
+
+.gallery-block {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.gallery-box {
+  row-gap: 24px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  /* position: relative;
+  z-index: 1;
+  background-size: cover; */
+}
+
+.gallery-padding {
+  padding-top: 50px;
+}
+
+/* .gallery-bottom {
+  padding-bottom: 0;
+} */
+.a {
+  background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, #000000 100%);
+  /* url("./assets/img/galery10.jpg"), url("./assets/img/galery11.jpg"); */
+  /* position: absolute;
+  z-index: 2;
+  content: "";
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0; */
+}
+
+/* --------------Tickets--------------- */
+.tickets {
+  background-color: white;
+}
+
+.tickets-container {
+  height: 1116px;
+  padding: 75px 0;
+  background-color: white;
+}
+
+.tickets-block {
+  display: flex;
+  justify-content: space-between;
+}
+
+.ticket-type {
+  padding-right: 180px;
+}
+
+.tickets-title {
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 28px;
+  line-height: 33px;
+  color: #000000;
+}
+.radio {
+}
+input {
+  /* appearance: none; */
+  /* border: 2px solid #000000; */
+  /* color: black; */
+  /* box-sizing: border-box; */
+  width: 17px;
+  height: 17px;
+  /* border-radius: 50%; */
+  /* outline: none; */
+}
+input:checked {
+  /* border: 2px solid #000000; */
+
+  /* color: black;
+  width: 7px;
+  height: 7px; */
+}
+.tickets-text {
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 22px;
+  line-height: 26px;
+  color: #000000;
+}
+.tickets-button {
+  background: #000000;
+  border-radius: 2px;
+  height: 50px;
+  width: 175px;
+}
+.tickets-text-button {
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 22px;
+  line-height: 26px;
+  letter-spacing: 2px;
+  color: #ffffff;
+  /* display: flex;
+align-items: center;
+text-align: center; */
 }
