--- a/museum/style.css
+++ b/museum/style.css
@@ -122,7 +122,7 @@ a {
 
 .header-link {
   display: inline-block;
-  list-style: none;
+  /* list-style: none; */
   padding-left: 30px;
   width: 63px;
   height: 26px;
@@ -862,5 +862,113 @@ a {
 
 .tickets-photo {
   width: 100%;
+  padding-bottom: 50px;
   /* height: 400px; */
+}
+
+/* --------------CONTACTS--------------- */
+.contacts {
+  background-color: white;
+}
+
+.ontacts-container {
+  height: 813px;
+  padding: 75px 0;
+  /* margin-bottom: 140px; */
+  background-color: white;
+  /* box-sizing: content-box; */
+}
+
+.contacts-block {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.contacts-title {
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 28px;
+  line-height: 33px;
+  color: #000000;
+  padding-bottom: 50px;
+}
+
+.contacts-text {
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 22px;
+  line-height: 26px;
+  color: #000000;
+  padding-left: 0;
+  padding-bottom: 25px;
+}
+
+.contacts-box {
+  display: flex;
+  flex-direction: column;
+  height: 244px;
+}
+
+.contacts-image {
+  margin-bottom: 70px;
+}
+/* --------------FOOTER--------------- */
+.footer {
+  background-color: #030303;
+}
+
+.footer-container {
+  height: 392px;
+  /* position: relative; */
+  /* padding-top: 75px;
+  margin-bottom: 10px; */
+  padding: 75px 0;
+  display: flex;
+  justify-content: space-between;
+  /* align-items: center; */
+}
+
+.footer-nav {
+  display: flex;
+  flex-direction: column;
+  /* justify-content: space-between; */
+  flex-wrap: wrap;
+  color: #ffffff;
+  /* width: 775px;
+  height: 26px; */
+  /* padding-right: 80px; */
+  /* max-width: 720px;
+  margin-left: auto;
+  padding-right: 31px; */
+}
+
+.footer-ul {
+  display: flex;
+  justify-content: space-between;
+  list-style: none;
+}
+
+/* .footer-li {
+  font-family: "Roboto", sans-serif;
+  font-size: 22px;
+  line-height: 22px;
+  letter-spacing: 2px;
+} */
+
+.footer-link {
+  padding-left: 30px;
+  /* width: 63px; */
+  /* height: 26px; */
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
+  font-weight: 100;
+  font-size: 22px;
+  line-height: 26px;
+  letter-spacing: 2px;
+  /* text-decoration: none; */
+  transition: 0.7s;
+  color: #ffffff;
 }
