--- a/shelter/pages/main/style.css
+++ b/shelter/pages/main/style.css
@@ -86,7 +86,7 @@ html {
 
 /* ----------------------------NOT ONLY---------------------------- */
 
-.welcome-container {
+.not-only-container {
   background-image: url("../../assets/images/gradient-bg.jpg");
   /* background-repeat: no-repeat; */
   padding-top: 120px;
@@ -102,13 +102,13 @@ html {
   /* padding: 75px 0; */
 }
 
-.welcome-block {
+.not-only-block {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
 }
 
-.welcome-content {
+.not-only-content {
   max-width: 460px;
   padding-top: 130px;
   /* padding-right: 30px; */
@@ -118,7 +118,7 @@ html {
   /* // width: calc(30% - 32px); */
 }
 
-.welcome-title {
+.not-only-title {
   font-family: "Georgia", serif;
   font-style: normal;
   font-weight: 400;
@@ -129,7 +129,7 @@ html {
   align-items: center; */
 }
 
-.welcome-text {
+.not-only-text {
   /* margin-bottom: 25px; */
   padding-top: 20px;
   padding-bottom: 35px;
@@ -143,10 +143,9 @@ html {
   align-items: center; */
 }
 
-.welcome-button {
+.not-only-button {
   border: 0;
-  cursor: pointer;
-  transition: 0.7s;
+
   font-family: "Georgia", serif;
   font-style: normal;
   font-weight: 400;
@@ -158,21 +157,15 @@ html {
   height: 52px;
   background: #f1cdb3;
   border-radius: 100px;
-  /* left: calc(50% - 207px / 2 - 126.5px); */
-  /* bottom: 0px; */
-  /* display: flex;
-  flex-direction: column; */
-  /* letter-spacing: 0.06em; */
-  /* text-align: center; */
-  /* align-items: center; */
-  /* flex: none; */
-  /* order: 0; */
-  /* flex-grow: 0; */
-  /* margin: 10px 0px; */
-  /* position: absolute; */
 }
 
-.welcome-image {
+.not-only-button:hover {
+  background: #fddcc4;
+  cursor: pointer;
+  transition: 1s;
+}
+
+.not-only-image {
   background-image: url("../../assets/images/start-puppy.jpg");
   /* position: absolute; */
   /* background-color: transparent !important;
@@ -183,7 +176,7 @@ html {
 
 /* ----------------------------ABOUT---------------------------- */
 .about-container {
-  background-color: white;
+  background-color: #ffffff;
   padding-top: 95px;
   height: 588px;
 }
@@ -207,7 +200,7 @@ html {
 }
 
 .about-title {
-  font-family: "Georgia";
+  font-family: "Georgia", serif;
   font-style: normal;
   font-weight: 400;
   font-size: 35px;
@@ -222,7 +215,7 @@ html {
 .about-text {
   /* padding-top: 20px; */
   padding-bottom: 30px;
-  font-family: "Arial";
+  font-family: "Arial", serif;
   font-style: normal;
   font-weight: 400;
   font-size: 15px;
@@ -269,10 +262,16 @@ html {
   border: 2px solid #f1cdb3;
   border-radius: 50%;
   margin-top: 195px;
-  background-image: url("../../assets/icons/Arrow1.svg");
+  background-image: url("../../assets/icons/arrow1.svg");
   background-repeat: no-repeat;
   background-position: center;
+}
+
+.previous:hover {
+  background-image: url("../../assets/icons/arrow1-hover.svg");
+  /* background: #fddcc4; */
   cursor: pointer;
+  transition: 1s;
 }
 
 .next {
@@ -282,11 +281,17 @@ html {
   border: 2px solid #f1cdb3;
   border-radius: 50%;
   margin-top: 195px;
-  background-image: url("../../assets/icons/Arrow2.svg");
+  background-image: url("../../assets/icons/arrow2.svg");
   background-repeat: no-repeat;
   background-position: center;
-  cursor: pointer;
 }
+
+.next:hover {
+  background: #fddcc4;
+  cursor: pointer;
+  transition: 1s;
+}
+
 .card-box {
   display: flex;
 }
@@ -331,14 +336,12 @@ html {
   letter-spacing: 0.06em;
   color: #292929;
   margin: 25px 0px;
-  /* box-sizing: border-box; */
-  /* display: flex;
-  flex-direction: column;
-  align-items: center; */
-  /* flex: none;
-  order: 0;
-  flex-grow: 0;
-  margin: 0px 0px; */
+}
+
+.card-button:hover {
+  background: #fddcc4;
+  cursor: pointer;
+  transition: 1s;
 }
 
 .our-friends-button {
@@ -357,17 +360,12 @@ html {
   margin-top: 65px;
   width: 22%;
   letter-spacing: 0.06em;
-  /* width: 261px; */
-  /* height: 52px; */
-  /* margin-left: 470px; */
-  /* top: 645px; */
-  /* margin: 50px 500px; */
-  /* display: flex; */
-  /* flex-direction: column; */
-  /* align-items: center; */
-  /* justify-content: center; */
-  /* text-align: center; */
-  /* align-self: center; */
+}
+
+.our-friends-button:hover {
+  background: #fddcc4;
+  cursor: pointer;
+  transition: 1s;
 }
 
 /* ----------------------------HELP---------------------------- */
@@ -459,7 +457,6 @@ html {
 .in-addition-image {
   margin-right: 20px;
   margin-bottom: 10px;
-  background-color: transparent;
 }
 
 .in-addition-content {
@@ -503,22 +500,106 @@ html {
   border: none;
   margin-top: 20px;
   margin-bottom: 20px;
+}
+
+.credit-icon {
+  background-image: url("../../assets/icons/credit-card.svg");
+  background-repeat: no-repeat;
+  /* background-position: center 0; */
+  background-position: left;
+  /* padding-left: 20px; */
+  /* margin-left: 30px; */
+  /* margin-right: 30px; */
+  /* padding-right: 30px; */
+  /* margin-top: 20px; */
+  /* padding-left: 20px; */
+  /* width: 30px;
+  height: 23px; */
+  /* background: #292929; */
+}
+
+.credit-link {
+  text-decoration: none;
+  color: #545454;
   font-family: "Georgia", serif;
   font-style: normal;
   font-weight: 400;
   font-size: 20px;
   line-height: 115%;
   letter-spacing: 0.06em;
-  color: #545454;
+  transition: 0.7s;
+  margin-left: 40px;
 }
-.credit-icon {
-  background-image: url("../../assets/icons/credit-card.svg");
-  background-repeat: no-repeat;
-  background-position: left;
-  /* margin-left: 30px;
-  margin-right: 30px;
-  padding-right: 30px; */
-  /* width: 30px;
-  height: 23px; */
-  /* background: #292929; */
+
+/* ----------------------------FOOTER---------------------------- */
+
+.footer-container {
+  height: 350px;
+  background-image: url("../../assets/images/gradient-bg.jpg");
+  /* padding-top: 60px; */
+}
+
+.footer-block {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.contacts {
+  padding-top: 58px;
+}
+
+.locations {
+  padding-right: 38px;
+  padding-top: 58px;
+}
+
+.footer-title {
+  font-family: "Georgia", serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 35px;
+  line-height: 130%;
+  letter-spacing: 0.06em;
+  color: #ffffff;
+}
+
+.link-box-contacts {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 38px;
+  /* padding-right: 33px; */
+  /* padding-left: 10px; */
+  /* padding-bottom: 10px; */
+}
+
+.link-box-locations {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 31px;
+}
+
+.footer-link {
+  font-family: "Georgia", serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 115%;
+  letter-spacing: 0.06em;
+  color: #f1cdb3;
+  text-decoration: none;
+}
+
+.link-email {
+  padding-right: 30px;
+}
+
+.link-tel {
+  padding-right: 40px;
+}
+
+.footer-image {
+  padding-top: 40px;
 }
