--- a/shelter/pages/main/style.css
+++ b/shelter/pages/main/style.css
@@ -19,9 +19,10 @@ html {
   background-image: url("../../assets/images/gradient-bg.jpg");
   background-repeat: no-repeat;
   background-position: center 0;
-  height: 60px;
   align-items: center;
-  padding-top: 60px;
+  /* position: sticky;
+  top: 0; */
+  /* height: 60px; */
   /* flex-wrap: wrap; */
   /* justify-content: space-between; */
 }
@@ -42,7 +43,7 @@ html {
   margin: 0;
 }
 
-.logo-text {
+.logo-subtitle {
   font-family: "Arial", serif;
   font-style: normal;
   font-weight: 400;
@@ -78,18 +79,25 @@ html {
   color: #cdcdcd;
   text-decoration: none;
   transition: 0.7s;
-  /* flex: none; */
-  /* order: 0; */
-  /* flex-grow: 0; */
-  /* margin: 10px 0px; */
+  border-bottom: 3px solid transparent;
 }
 
+/* .bottom {
+  border-bottom: 3px solid #f1cdb3;
+} */
+.header-link:active,
+.header-link:hover,
+.header-link:focus {
+  border-bottom: 3px solid #f1cdb3;
+  color: #fddcc4;
+  /* text-decoration: underline; */
+}
 /* ----------------------------NOT ONLY---------------------------- */
 
 .not-only-container {
   background-image: url("../../assets/images/gradient-bg.jpg");
-  /* background-repeat: no-repeat; */
   padding-top: 120px;
+  /* background-repeat: no-repeat; */
   /* background-position: center -90px; */
   /* height: 908px; */
   /* padding-left: 80px; */
@@ -144,8 +152,7 @@ html {
 }
 
 .not-only-button {
-  border: 0;
-
+  border: none;
   font-family: "Georgia", serif;
   font-style: normal;
   font-weight: 400;
@@ -166,12 +173,13 @@ html {
 }
 
 .not-only-image {
-  background-image: url("../../assets/images/start-puppy.jpg");
+  /* background-image: url("../../assets/images/start-puppy.jpg"); */
   /* position: absolute; */
-  /* background-color: transparent !important;
-  opacity: 0.4; */
-  /* background: transparent url("../../assets/images/start-puppy.jpg") 50% 50%
-    no-repeat;*/
+  /* background-color: transparent !important; */
+  /* background-color: url(../../assets/images/gradient-bg.jpg); */
+  /* opacity: 0.4; */
+  /* background: transparent url("../../assets/images/start-puppy.jpg") 50% 50% */
+  /* no-repeat; */
 }
 
 /* ----------------------------ABOUT---------------------------- */
@@ -258,32 +266,35 @@ html {
 .previous {
   width: 52px;
   height: 52px;
-  padding: 23px 19px;
+  padding: 10px 15px;
   border: 2px solid #f1cdb3;
   border-radius: 50%;
   margin-top: 195px;
-  background-image: url("../../assets/icons/arrow1.svg");
   background-repeat: no-repeat;
   background-position: center;
+  /* padding: 23px 19px; */
+  /* background-image: url("../../assets/icons/arrow1.svg"); */
 }
 
 .previous:hover {
-  background-image: url("../../assets/icons/arrow1-hover.svg");
-  /* background: #fddcc4; */
+  background: #fddcc4;
   cursor: pointer;
   transition: 1s;
+  /* background-image: url("../../assets/icons/arrow1-hover.svg"); */
 }
 
 .next {
   width: 52px;
   height: 52px;
-  padding: 23px 19px;
+  padding: 22px 16px;
   border: 2px solid #f1cdb3;
   border-radius: 50%;
   margin-top: 195px;
-  background-image: url("../../assets/icons/arrow2.svg");
   background-repeat: no-repeat;
   background-position: center;
+  display: flex;
+  /* background-image: url("../../assets/icons/arrow2.svg"); */
+  /* padding: 23px 19px; */
 }
 
 .next:hover {
@@ -328,13 +339,6 @@ html {
   border: 2px solid #f1cdb3;
   border-radius: 100px;
   background: #fafafa;
-  font-family: "Georgia", serif;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 17px;
-  line-height: 130%;
-  letter-spacing: 0.06em;
-  color: #292929;
   margin: 25px 0px;
 }
 
@@ -343,6 +347,182 @@ html {
   cursor: pointer;
   transition: 1s;
 }
+
+/* ----modal---- */
+.card-link {
+  text-decoration: none;
+  font-family: "Georgia", serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 17px;
+  line-height: 130%;
+  letter-spacing: 0.06em;
+  color: #292929;
+}
+
+.modal-block {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: rgba(41, 41, 41, 0.6);
+  transition: all 0.8s ease 0s;
+  pointer-events: none;
+  opacity: 0;
+  visibility: hidden;
+  /* display: none; */
+  /* z-index: 1; */
+}
+
+.modal-block:target {
+  pointer-events: auto;
+  opacity: 1;
+  visibility: visible;
+  /* display: block; */
+}
+
+.modal-block:target .modal-content {
+  transform: translate(0px, 0px);
+  opacity: 1;
+}
+.modal-content {
+  position: relative;
+  max-width: 900px;
+  height: 500px;
+  margin: 10% auto;
+  border-radius: 9px;
+  background: #fafafa;
+  border: none;
+  transform: translate(0px, -100%);
+  opacity: 0;
+  transition: all 0.8s ease 0s;
+  /* padding: 5px 20px 13px 20px; */
+  /* padding: 20px; */
+  /* width: 80%;  */
+}
+
+.close-all {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+}
+
+.close {
+  background: rgba(41, 41, 41, 0.6);
+  line-height: 25px;
+  position: absolute;
+  right: -50px;
+  top: -45px;
+  width: 52px;
+  height: 52px;
+  padding: 10px 15px;
+  border: 2px solid #f1cdb3;
+  border-radius: 50%;
+  /* text-decoration: none; */
+  /* font-weight: bold; */
+  /* background-repeat: no-repeat; */
+  /* background-position: center; */
+  /* text-align: center; */
+  /* color: #ffffff; */
+  /* width: 24px; */
+  /* margin-top: 195px; */
+  /* border-radius: 12px; */
+  /* box-shadow: 1px 1px 3px #000; */
+  /* color: #aaa; */
+  /* float: right; */
+  /* font-size: 28px; */
+  /* font-weight: bold; */
+  /* box-sizing: border-box; */
+  /* border-radius: 100px; */
+}
+
+.close:hover {
+  background: #fddcc4;
+  cursor: pointer;
+  transition: 1s;
+}
+
+.modal-image {
+  position: absolute;
+  border-radius: 9px;
+  border: none;
+  width: 500px;
+  height: 500px;
+  top: 0;
+  left: 0;
+}
+
+.modal-box {
+  margin-left: 520px;
+  display: flex;
+  flex-direction: column;
+}
+
+.modal-title {
+  padding-top: 20px;
+  padding-bottom: 10px;
+  font-family: "Georgia", serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 35px;
+  line-height: 130%;
+  letter-spacing: 0.06em;
+  color: #000000;
+}
+
+.modal-subtitle {
+  font-family: "Georgia", serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 115%;
+  letter-spacing: 0.06em;
+  color: #000000;
+}
+
+.modal-text {
+  padding-top: 40px;
+  padding-bottom: 40px;
+  width: 350px;
+  font-family: "Georgia", serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 110%;
+  letter-spacing: 0.06em;
+  color: #000000;
+}
+
+li {
+  /* text-align: left; */
+  /* left: 0; */
+  padding-bottom: 11px;
+  color: #f1cdb3;
+}
+
+.modal-span1 {
+  font-family: "Georgia", serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 15px;
+  line-height: 110%;
+  letter-spacing: 0.06em;
+  color: #000000;
+}
+
+.modal-span2 {
+  font-family: "Georgia", serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 110%;
+  letter-spacing: 0.06em;
+  color: #000000;
+}
+/* ------------------ */
 
 .our-friends-button {
   padding: 15px 45px;
@@ -398,6 +578,7 @@ html {
 .icon {
   background-repeat: no-repeat;
   background-position: center;
+  align-items: center;
   width: 60px;
   height: 60px;
   margin: 0 auto;
@@ -602,4 +783,37 @@ html {
 
 .footer-image {
   padding-top: 40px;
+}
+
+.map-responsive {
+  /* position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: rgba(41, 41, 41, 0.6);
+  transition: all 0.8s ease 0s;
+  pointer-events: none; */
+  /* opacity: 0;
+  visibility: hidden; */
+  /* z-index: 1;
+  display: none; */
+  /* position: relative; */
+  /* overflow: hidden; */
+  /* padding-bottom: 56.25%; */
+  /* height: 0; */
+}
+.map-responsive iframe {
+  /* left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  position: relative; */
+}
+.map-responsive:active {
+  /* overflow: hidden;
+  opacity: 1;
+  visibility: visible;
+  display: block; */
 }
