--- a/shelter/pages/main/style.css
+++ b/shelter/pages/main/style.css
@@ -37,7 +37,7 @@ html {
   display: flex;
   align-items: center;
   color: #f1cdb3;
-  letter-spacing: 0.06em;
+  letter-spacing: 0.09em;
   padding-top: 57px;
   /* padding-bottom: 25px; */
   margin: 0;
@@ -54,12 +54,14 @@ html {
   letter-spacing: 0.1em;
   color: #ffffff;
   padding-top: 12px;
+  padding-left: 5px;
   /* padding-bottom: 40px; */
 }
 
 .header-nav {
   margin-left: auto;
   padding-top: 67px;
+  padding-right: 5px;
   /* height: 27px; */
   /* max-width: 720px; */
 }
@@ -96,7 +98,7 @@ html {
 
 .not-only-container {
   background-image: url("../../assets/images/gradient-bg.jpg");
-  padding-top: 62px;
+  padding-top: 59px;
   /* background-repeat: no-repeat; */
   /* background-position: center -90px; */
   /* height: 908px; */
@@ -118,7 +120,7 @@ html {
 
 .not-only-content {
   max-width: 460px;
-  padding-top: 130px;
+  padding-top: 133px;
   /* padding-right: 30px; */
   /* z-index: 1; */
   /* position: absolute; */
@@ -158,6 +160,7 @@ html {
   font-weight: 400;
   font-size: 17px;
   line-height: 130%;
+  letter-spacing: 1px;
   color: #292929;
   padding: 17px 0;
   width: 207px;
@@ -197,13 +200,14 @@ html {
 
 .about-image {
   margin-bottom: 50px;
-  /* padding-bottom: 40px; */
+  /* padding-bottom: 0px; */
   padding-left: 20px;
 }
 
 .about-content {
   max-width: 430px;
-  margin-right: 30px;
+  margin-right: 35px;
+  /* padding-bottom: 85px; */
   /* padding-top: 50px; */
 }
 
@@ -217,12 +221,14 @@ html {
   color: #545454;
   /* display: flex;
   align-items: center; */
-  margin-bottom: 20px;
+  /* margin-bottom: 20px; */
+  padding-bottom: 22px;
+  /* margin-right: 5px; */
 }
 
 .about-text {
   /* padding-top: 20px; */
-  padding-bottom: 30px;
+  padding-bottom: 25px;
   font-family: "Arial", serif;
   font-style: normal;
   font-weight: 400;
@@ -266,14 +272,9 @@ html {
 .previous {
   width: 52px;
   height: 52px;
-  padding: 10px 15px;
   border: 2px solid #f1cdb3;
   border-radius: 50%;
   margin-top: 195px;
-  background-repeat: no-repeat;
-  background-position: center;
-  /* padding: 23px 19px; */
-  /* background-image: url("../../assets/icons/arrow1.svg"); */
 }
 
 .previous:hover {
@@ -303,13 +304,19 @@ html {
   transition: 1s;
 }
 
+.arrow {
+  background-repeat: no-repeat;
+  background-position: center;
+  padding-bottom: 3px;
+}
+
 .card-box {
   display: flex;
 }
 
 .card {
   justify-content: space-between;
-  margin: 0 30px;
+  margin: 0 45px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -328,14 +335,15 @@ html {
   line-height: 23px;
   letter-spacing: 0.06em;
   color: #545454;
-  padding-top: 35px;
+  padding-top: 33px;
+  padding-bottom: 2px;
   /* display: flex;
   align-items: center;
   text-align: center; */
 }
 
 .card-button {
-  padding: 15px 45px;
+  padding: 14px 45px;
   border: 2px solid #f1cdb3;
   border-radius: 100px;
   background: #fafafa;
@@ -640,11 +648,14 @@ li {
 }
 
 .in-addition-image {
-  margin-right: 20px;
-  margin-bottom: 10px;
+  height: 261px;
+  margin-right: 25px;
+  margin-top: 10px;
+  /* margin-bottom: 10px; */
 }
 
 .in-addition-content {
+  margin-left: 5px;
   max-width: 380px;
 }
 
@@ -654,7 +665,7 @@ li {
   font-weight: 400;
   font-size: 35px;
   line-height: 130%;
-  padding-bottom: 20px;
+  padding-bottom: 18px;
   letter-spacing: 0.06em;
   color: #545454;
 }
@@ -683,21 +694,23 @@ li {
   background: #f1cdb3;
   border-radius: 9px;
   border: none;
-  margin-top: 20px;
-  margin-bottom: 20px;
+  margin: 20px 0;
+  padding-left: 58px;
+  /* position: relative; */
+  /* padding: 0; */
 }
 
 .credit-icon {
   background-image: url("../../assets/icons/credit-card.svg");
   background-repeat: no-repeat;
-  /* background-position: center 0; */
-  background-position: left;
+  background-position: 0;
+  /* position: absolute; */
+  /* background-position: left; */
   /* padding-left: 20px; */
   /* margin-left: 30px; */
   /* margin-right: 30px; */
   /* padding-right: 30px; */
   /* margin-top: 20px; */
-  /* padding-left: 20px; */
   /* width: 30px;
   height: 23px; */
   /* background: #292929; */
@@ -713,80 +726,7 @@ li {
   line-height: 115%;
   letter-spacing: 0.06em;
   transition: 0.7s;
-  margin-left: 40px;
-}
-
-/* ----------------------------FOOTER---------------------------- */
-
-.footer-container {
-  height: 350px;
-  background-image: url("../../assets/images/gradient-bg.jpg");
-  /* padding-top: 60px; */
-}
-
-.footer-block {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-}
-
-.contacts {
-  padding-top: 58px;
-}
-
-.locations {
-  padding-right: 38px;
-  padding-top: 58px;
-}
-
-.footer-title {
-  font-family: "Georgia", serif;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 35px;
-  line-height: 130%;
-  letter-spacing: 0.06em;
-  color: #ffffff;
-}
-
-.link-box-contacts {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding-top: 38px;
-  /* padding-right: 33px; */
-  /* padding-left: 10px; */
-  /* padding-bottom: 10px; */
-}
-
-.link-box-locations {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding-top: 31px;
-}
-
-.footer-link {
-  font-family: "Georgia", serif;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 20px;
-  line-height: 115%;
-  letter-spacing: 0.06em;
-  color: #f1cdb3;
-  text-decoration: none;
-}
-
-.link-email {
-  padding-right: 30px;
-}
-
-.link-tel {
-  padding-right: 40px;
-}
-
-.footer-image {
-  padding-top: 40px;
+  /* margin-left: 40px; */
 }
 
 /* ----------- */
@@ -808,3 +748,85 @@ li {
   visibility: visible;
   opacity: 1;
 } */
+
+/* ----------------------------FOOTER---------------------------- */
+
+.footer-container {
+  height: 350px;
+  background-image: url("../../assets/images/gradient-bg.jpg");
+}
+
+.footer-block {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.contacts {
+  padding-top: 55px;
+}
+
+.footer-title {
+  font-family: "Georgia", serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 35px;
+  line-height: 130%;
+  letter-spacing: 0.06em;
+  color: #ffffff;
+}
+
+.link-box-contacts {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 38px;
+}
+
+.footer-icon-contacts {
+  padding-right: 20px;
+  padding-bottom: 2px;
+}
+
+.footer-link {
+  font-family: "Georgia", serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 115%;
+  letter-spacing: 0.06em;
+  color: #f1cdb3;
+  text-decoration: none;
+}
+
+.link-email {
+  padding-right: 28px;
+}
+
+.link-tel {
+  padding-right: 40px;
+}
+
+.locations {
+  padding-top: 55px;
+}
+
+.link-box-locations {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 302px;
+  padding-top: 32px;
+}
+
+.link-map {
+  padding-right: 10px;
+}
+
+.link-map2 {
+  padding-right: 32px;
+}
+
+.footer-image {
+  padding-top: 40px;
+}
